Added flag validation and improved the ui

--- a/labs/xss-lab/app/dom.html
+++ b/labs/xss-lab/app/dom.html
@@ -3,77 +3,162 @@
 <head>
 <meta charset="UTF-8">
 <title>DOM XSS Lab</title>
+
 <style>
 body {
-  background:#020617;
-  color:#e5e7eb;
-  font-family:system-ui;
-  display:flex;
-  justify-content:center;
-  align-items:center;
-  min-height:100vh;
+    background:#020617;
+    color:#e5e7eb;
+    font-family:system-ui;
+    margin:0;
+    padding:40px;
 }
+
 .container {
-  width:440px;
-  padding:24px;
-  background:#020617;
-  border:1px solid #1e293b;
-  border-radius:14px;
-  box-shadow:0 0 40px rgba(37,99,235,.15);
+    max-width:1200px;
+    margin:auto;
 }
-h1 { text-align:center; color:#60a5fa; }
+
+.header {
+    margin-bottom:30px;
+}
+
+.header h1 {
+    font-size:28px;
+    margin-bottom:6px;
+}
+
+.subtitle {
+    color:#94a3b8;
+}
+
+.grid {
+    display:grid;
+    grid-template-columns:2fr 1fr;
+    gap:24px;
+}
+
+.card {
+    background:#0d1238;
+    border:1px solid #1e293b;
+    border-radius:16px;
+    padding:24px;
+}
+
+.section-title {
+    font-size:18px;
+    margin-bottom:20px;
+}
+
+label {
+    font-size:14px;
+    color:#cbd5e1;
+    display:block;
+    margin-bottom:6px;
+}
+
+select {
+    width:100%;
+    padding:12px;
+    border-radius:10px;
+    border:1px solid #334155;
+    background:#0a0e27;
+    color:#e5e7eb;
+    margin-bottom:14px;
+}
+
+.execute-btn {
+    padding:14px 22px;
+    border-radius:10px;
+    border:none;
+    background:#2563eb;
+    color:white;
+    cursor:pointer;
+    font-weight:600;
+    width:100%;
+}
+
+.execute-btn:hover {
+    background:#1d4ed8;
+}
 
 .status-ball {
-  width:14px;
-  height:14px;
-  margin:12px auto;
-  border-radius:50%;
-  animation:pulse 1.8s infinite;
+    width:14px;
+    height:14px;
+    border-radius:50%;
+    margin-left:10px;
+    display:inline-block;
+    animation:pulse 1.8s infinite;
 }
+
 .vulnerable { background:#22c55e; box-shadow:0 0 12px #22c55e; }
 .secure { background:#3b82f6; box-shadow:0 0 12px #3b82f6; }
 .success { background:#ef4444; box-shadow:0 0 14px #ef4444; }
 
 @keyframes pulse {
-  0% { transform:scale(.9); opacity:.6 }
-  50% { transform:scale(1.2); opacity:1 }
-  100% { transform:scale(.9); opacity:.6 }
+    0% { transform:scale(.9); opacity:.6 }
+    50% { transform:scale(1.2); opacity:1 }
+    100% { transform:scale(.9); opacity:.6 }
 }
 
-label { font-size:13px; display:block; margin-top:10px }
-select, button {
-  width:100%;
-  padding:10px;
-  margin-top:4px;
-  border-radius:8px;
-  border:1px solid #334155;
-  background:#020617;
-  color:white;
+.output-box {
+    background:#0a0e27;
+    border:1px solid #334155;
+    border-radius:12px;
+    padding:16px;
+    font-family:monospace;
+    min-height:120px;
+    white-space:pre-wrap;
 }
-button {
-  margin-top:14px;
-  background:#2563eb;
-  border:none;
-  cursor:pointer;
-}
-button:hover { background:#1d4ed8 }
 
-.box {
-  margin-top:16px;
-  padding:10px;
-  font-size:13px;
-  border-radius:8px;
-  background:#020617;
-  border:1px dashed #334155;
-  color:#facc15;
+.payload {
+    background:#0a0e27;
+    padding:12px;
+    border-radius:10px;
+    border:1px solid #334155;
+    margin-top:10px;
+    font-family:monospace;
+    font-size:13px;
 }
 </style>
 </head>
 <body>
-<div class="container">
-<h1> DOM XSS Lab</h1>
 
-<div id="ball" class="status-ball vulnerable"></div>
+<div class="container">
+
+<div class="header">
+<h1>⚡ DOM-Based XSS Lab 
+<span id="ball" class="status-ball vulnerable"></span>
+</h1>
+<p class="subtitle">
+Reads payload from URL parameter <code>?q=</code> and writes it into the DOM.
+</p>
+</div>
+<div style="margin-bottom:30px; border-bottom:1px solid #1e293b;">
+  <div style="display:flex; gap:20px;">
+
+    <a href="index.php"
+       style="padding:12px 0; color:#94a3b8; text-decoration:none;">
+       Reflected XSS
+    </a>
+
+    <a href="dom.html"
+       style="padding:12px 0; font-weight:600; color:#60a5fa; border-bottom:2px solid #3b82f6; text-decoration:none;">
+       DOM XSS
+    </a>
+
+    <a href="stored.php"
+       style="padding:12px 0; color:#94a3b8; text-decoration:none;">
+       Stored XSS
+    </a>
+
+  </div>
+</div>
+<div class="grid">
+
+<div>
+
+<div class="card">
+<h2 class="section-title">Lab Configuration</h2>
 
 <label>Mode</label>
 <select id="mode">
@@ -88,10 +173,53 @@ button:hover { background:#1d4ed8 }
   <option value="hard">Hard</option>
 </select>
 
-<button onclick="run()">Render from URL</button>
+<button class="execute-btn" onclick="run()">Render from URL</button>
 
-<div id="output" class="box"></div>
-<div id="explain" class="box"></div>
+</div>
+
+<div class="card" style="margin-top:24px;">
+<h2 class="section-title">Output</h2>
+<div id="output" class="output-box">
+Output will appear here after execution...
+</div>
+</div>
+
+</div>
+
+<div>
+
+<div class="card">
+<h2 class="section-title">Lab Info</h2>
+<p><strong>Category:</strong> Cross-Site Scripting</p>
+<p><strong>Type:</strong> DOM-Based</p>
+<p><strong>Source:</strong> URL Parameter</p>
+<p><strong>Sink:</strong> innerHTML / textContent</p>
+</div>
+
+<div class="card" style="margin-top:24px;">
+<h2 class="section-title">Payload Guide</h2>
+
+<div class="payload">
+Basic:<br>
+? q=&lt;script&gt;alert(1)&lt;/script&gt;
+</div>
+
+<div class="payload">
+Advanced:<br>
+? q=&lt;img src=x onerror=alert(1)&gt;
+</div>
+
+</div>
+
+<div class="card" style="margin-top:24px;">
+<h2 class="section-title">Payload Analysis</h2>
+<div id="explain" class="output-box"></div>
+</div>
+
+</div>
+
+</div>
+
 </div>
 
 <script>
@@ -124,9 +252,11 @@ function run() {
         .replace(/</g, "&lt;")
         .replace(/>/g, "&gt;");
     }
+
     document.getElementById("output").innerHTML = rendered;
     document.getElementById("ball").className =
       "status-ball " + (difficulty === "easy" ? "success" : "vulnerable");
+
   } else {
     document.getElementById("output").textContent = input;
     document.getElementById("ball").className = "status-ball secure";
@@ -136,5 +266,6 @@ function run() {
     explain(input, mode, difficulty);
 }
 </script>
+
 </body>
 </html>
